--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
 	position: absolute;
 	left: 0;
 	right: 0;
-	top: 20%;
+	top: 10%;
 }
 .container .row,
 .container .row .card {
@@ -28,30 +28,42 @@ body {
 }
 .card .card-content .socials {
 	text-align: center;
-	margin-top: 2rem;
+	margin-top: 1rem;
 }
 .card .card-content .socials i {
 	font-size: 1.5rem;
 	padding: 1rem;
 }
+.on-sale {
+	background-color: #0F0;			/*Change this ugly color*/
+}
+.cfp {
+	background-color: #F60;			/*Change this ugly color*/
+	color: #FFF;
+}
+#family {
+	color: #FFF;
+	text-align: center;
+	text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+}
 
 @media screen and (max-width: 600px) {
 	.container {
 		top: 10%;
-		padding-bottom: 5rem;
+		padding-bottom: 1rem;
 	}
 	.card .card-content .socials i {
-		font-size: 3rem;
+		font-size: 1rem;
 	}
 }
 @media screen and (max-width: 1400px) and (min-width: 600px) {
 	.card .card-content .socials {
-		padding-top: 3rem;
+		padding-top: 1rem;
 	}
 	.card .card-content .socials i {
 		padding: 0.5rem;
 	}
 	.card .card-content .card-title {
-		min-height: 4.5rem;
+		min-height: 3.5rem;
 	}
 }
