--- a/css/main.css
+++ b/css/main.css
@@ -42,20 +42,44 @@ body {
 	top: -25px;
 	left: -25px;
 	z-index: 1;
+	font-size: 14px;
+	border-radius: 180px;
+	color: #fff;
+	background-color: #62FF00;
+	border: none;
+	line-height: 1;
+	text-align: center;
+	height: 50px;
+	width: 50px;
+	display: flex;
+  	flex-direction: column;
+  	justify-content: center;
 }
 .on-sale {
 	position: absolute;
 	top: -25px;
 	left: 25px;
 	z-index: 1;
-}
-.cfp > a > img {
+	font-size: 14px;
+	border-radius: 180px;
+	color: #fff;
+	background-color: #FF6600;
+	border: none;
+	line-height: 1;
+	text-align: center;
 	height: 50px;
 	width: 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
-.on-sale > a > img {
-	height: 50px;
-	width: 50px;
+.cfp > a {
+	text-decoration: none;
+	color: #FFF;
+}
+.on-sale > a {
+	text-decoration: none;
+	color: #FFF;
 }
 
 #family {
