--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" media="screen, projection" href="css/materialize.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" media="screen" href="css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet"> 
 	<link rel="stylesheet" media="screen" href="css/main.css">
+	<link rel="stylesheet" media="screen" href="css/animate.css">
 </head>
