--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,5 +7,5 @@
 	<link rel="stylesheet" media="screen" href="css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet"> 
 	<link rel="stylesheet" media="screen" href="css/main.css">
-	<link rel="stylesheet" media="screen" href="css/animate.css">
+	<link rel="stylesheet" media="screen" href="css/animate.min.css">
 </head>
