Center Vertical images on Horizontal view

--- a/_includes/events3.html
+++ b/_includes/events3.html
@@ -1,7 +1,7 @@
 {% for event in site.data.events %}
     <div class="col s12 m8 offset-m2">
         <div class="card horizontal">
-            <div class="card-image" style="border-right: 1px solid rgba(160,160,160,0.2); max-width: 30%;">
+            <div class="card-image">
                 <img src="images/{{ event.image }}">
             </div>
             <div class="card-stacked">
