--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
+<svg class="triangle-up" xmlns="http://www.w3.org/2000/svg" width="100%" height="70" viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path d="M0 100 L50 0 L100 100 Z" />
+    <path class="shadow" d="M50 0 L0 60 L0 100 Z"></path>
+</svg>
 <footer>
     <div class="container">
         <p>&copy; ScaleConf 2017</p>
