--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,8 @@
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" media="screen, projection" href="css/materialize.min.css">
 	<link rel="stylesheet" media="screen" href="css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 	<link rel="stylesheet" media="screen" href="css/main.css">
 	<link rel="stylesheet" media="screen" href="css/animate.min.css">
 </head>
