--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <h1>ScaleConf Family</h1>
+        <h1 class="animated">ScaleConf Family</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam laudantium minima architecto, fugiat rem, vel nostrum? Hic, esse quos quibusdam doloremque inventore atque sapiente vitae molestias accusamus, corporis, nostrum provident!</p>
         <p class="read-more">
             <a href="#events"><i class="fa fa-chevron-circle-down animated infinite bounce" aria-hidden="true"></i></a>
@@ -8,3 +8,7 @@
     </div>
     <canvas class="background"></canvas>
 </header>
+<svg class="triangle-down" xmlns="http://www.w3.org/2000/svg" width="100%" height="70" viewBox="0 0 100 100" preserveAspectRatio="none">
+    <path class="triangle" d="M0 0 L50 100 L100 0 Z" />
+    <path class="shadow" d="M50 100 L100 40 L100 0 Z"></path>
+</svg>
